# Foliate4w

./: .gitignore  AGENTS.md  CHANGELOG.md  README-zh.md  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: windows.yml
Licenses/: Tauri-LICENSE-MIT.txt  fflate-MIT.txt  zip.js-BSD-3-Clause.txt
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
web/: index.html  library.js  main.js  styles.css
web/public/foliate-js/: fixed-layout.js  paginator.js  pdf.js  view.js
