[package]
name = "foliate4w"
version = "0.1.2"
description = "Foliate e-book reader for Windows"
authors = ["Foliate contributors"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "foliate4w_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11", features = [] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
